package CRM_Manara.CRM_Manara.Enum;

public enum AccountStatus {
    ACTIF,
    SUSPENDU
}
