package CRM_Manara.CRM_Manara.Enum;

public enum AnimationRole {
    PRINCIPAL,
    ASSISTANT,
    TUTEUR,
    COACH,
}
