package CRM_Manara.CRM_Manara.Enum;

public enum SecurityRole {
    ROLE_ADMIN,
    ROLE_PARENT,
    ROLE_ANIMATEUR
}
