package CRM_Manara.CRM_Manara.Enum;

public enum animationStatus {
    ACTIF,
    ANNULÉ,

    REMPLACÉ
}
