package CRM_Manara.CRM_Manara.Enum;

public enum statusInscription {
    ACTIF,
    ANNULÉE
}
