package CRM_Manara.CRM_Manara;

public enum status {
    OUVERTE,
    COMPLÈTE,
    ANNULÉE


}
