package CRM_Manara.CRM_Manara;

public enum typeActivity {
    SPORT,
    MUSIQUE,
    ART,
    LECTURE,
    TUTORAT

}
